--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "AhoCorasickTrie"]
+	path = AhoCorasickTrie
+	url = https://github.com/chambm/ahocorasicktrie
+	shallow = true
+	registered = true
